--- a/src/index.html
+++ b/src/index.html
@@ -30,5 +30,7 @@
   <div id="app"></div>
   
   <!-- built script files will be auto injected -->
+  <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 </body>
+
 </html>
